# Mandelbrot

./: .editorconfig  .flake8  .gitignore  App.py  Global.py  Makefile  Mandelbrot.py  README.md  Texture.py  main.py  pyproject.toml
